Bug #3684 Uninstall tray tool if MS has been removed
<==== Mercurial data ====>
Branch: data_migration

--- a/wixsetup/maven/filter-resources/server.wxs
+++ b/wixsetup/maven/filter-resources/server.wxs
@@ -216,6 +216,11 @@
             <ComponentRef Id="VmaxProxyQTLibraries"/>
             <ComponentGroupRef Id="VmaxProxySDK"/>
             <?endif?>       
+
+            <ComponentRef Id="traytool.exe"/>
+            <ComponentGroupRef Id="TrayToolQTLibraries"/>
+            <ComponentGroupRef Id="TraytoolPlatforms" />            
+
         </Feature>
 
     </Fragment>
