--- a/client/src/ui/widgets/properties/camera_schedule_widget.ui
+++ b/client/src/ui/widgets/properties/camera_schedule_widget.ui
@@ -46,13 +46,6 @@
       </spacer>
      </item>
      <item>
-      <widget class="QLabel" name="requiredLicensesLabel">
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item>
       <widget class="QPushButton" name="licensesButton">
        <property name="text">
         <string>Get More Licenses...</string>
@@ -62,11 +55,7 @@
     </layout>
    </item>
    <item>
-    <widget class="QLabel" name="licensesLabel">
-     <property name="text">
-      <string notr="true">&lt;X license(s) are used out of Y&gt;</string>
-     </property>
-    </widget>
+    <widget class="QnLicensesUsageWidget" name="licensesUsageWidget" native="true"/>
    </item>
    <item>
     <widget class="QGroupBox" name="scheduleGridGroupBox">
@@ -656,6 +645,12 @@
    <class>QnCheckedButton</class>
    <extends>QToolButton</extends>
    <header>ui/widgets/checked_button.h</header>
+  </customwidget>
+  <customwidget>
+   <class>QnLicensesUsageWidget</class>
+   <extends>QWidget</extends>
+   <header location="global">ui/widgets/licenses_usage_widget.h</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <tabstops>
