--- a/client/src/ui/widgets/properties/multiple_camera_settings_widget.ui
+++ b/client/src/ui/widgets/properties/multiple_camera_settings_widget.ui
@@ -32,7 +32,16 @@
          <layout class="QVBoxLayout" name="verticalLayout_5">
           <item>
            <layout class="QFormLayout" name="formLayout_2">
-            <property name="margin">
+            <property name="leftMargin">
+             <number>9</number>
+            </property>
+            <property name="topMargin">
+             <number>9</number>
+            </property>
+            <property name="rightMargin">
+             <number>9</number>
+            </property>
+            <property name="bottomMargin">
              <number>9</number>
             </property>
             <item row="0" column="0">
@@ -135,13 +144,6 @@
              </spacer>
             </item>
             <item>
-             <widget class="QLabel" name="requiredLicensesLabel">
-              <property name="text">
-               <string/>
-              </property>
-             </widget>
-            </item>
-            <item>
              <widget class="QPushButton" name="moreLicensesButton">
               <property name="text">
                <string>Get More Licenses...</string>
@@ -151,11 +153,7 @@
            </layout>
           </item>
           <item>
-           <widget class="QLabel" name="licensesLabel">
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
+           <widget class="QnLicensesUsageWidget" name="licensesUsageWidget" native="true"/>
           </item>
          </layout>
         </widget>
@@ -190,7 +188,16 @@
        <string>Recording</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout">
-       <property name="margin">
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
         <number>0</number>
        </property>
        <item>
@@ -203,7 +210,16 @@
        <string>Expert</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_6">
-       <property name="margin">
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
         <number>0</number>
        </property>
        <item>
@@ -226,6 +242,12 @@
    <class>QnAdvancedSettingsWidget</class>
    <extends>QWidget</extends>
    <header>ui/widgets/properties/expert_settings_widget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>QnLicensesUsageWidget</class>
+   <extends>QWidget</extends>
+   <header location="global">ui/widgets/licenses_usage_widget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
